Added nav bar and attempted responsive layout

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>About | Your Name</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <title>About | James Snell</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
+      <a href="index.html" id="logo">James Snell</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
@@ -24,13 +24,9 @@
     <section class="main-section">
       <h1>About Me</h1>
 
-      <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
+      <img src="//portfolio/Basic-Portfolio/assets/images/Tall.jpg" class="auth-image" alt="James">
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus vitae sollicitudin consectetur.</p>
-
-      <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id eros iaculis, pulvinar quam eget, egestas mauris.</p>
-
-      <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+      <p>I graduated Colorado State University with a bachelors in Communication Studies. I have worked a plethora of jobs since. In the stupply chain department I ran a liquor store, worked in a warehouse, a greenhouse, a trucking yard, and made malt for Coors Brewery. In the customer service sector I caddied, worked fast food, and held the service specialist title in an office setting. My transition to tech has led me to study html and css through Skillcrush, then a JavaScript prep course at Galvanize before ending up in the University of Denvers bootcamp.</p>
 
     </section>
 
