Added images and made responsive

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <section class="main-section">
       <h1>About Me</h1>
 
-      <img src="//portfolio/Basic-Portfolio/assets/images/Tall.jpg" class="auth-image" alt="James">
+      <img src="Tall.jpg" class="auth-image" alt="James">
 
-      <p>I graduated Colorado State University with a bachelors in Communication Studies. I have worked a plethora of jobs since. In the stupply chain department I ran a liquor store, worked in a warehouse, a greenhouse, a trucking yard, and made malt for Coors Brewery. In the customer service sector I caddied, worked fast food, and held the service specialist title in an office setting. My transition to tech has led me to study html and css through Skillcrush, then a JavaScript prep course at Galvanize before ending up in the University of Denvers bootcamp.</p>
+      <p>I graduated Colorado State University with a bachelors in Communication Studies. I have worked a plethora of jobs since. In the supply chain department I ran a liquor store, worked in a warehouse, a greenhouse, a trucking yard, and made malt for Coors Brewery. In the customer service sector I caddied, worked fast food, and held the service specialist title in an office setting. My transition to tech has led me to study html and css through Skillcrush, then a JavaScript prep course at Galvanize before ending up in the University of Denvers bootcamp.</p>
 
     </section>
 
