--- a/portfolio.html
+++ b/portfolio.html
@@ -3,62 +3,76 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Portfolio | Your Name</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <title>Portfolio | James Snell</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+
 </head>
 
 <body>
 
-  <header id="masthead">
-    <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
-      <nav>
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
-      </nav>
-    </div>
-  </header>
 
-  <div id="main-container" class="container">
-    <section class="main-section">
-      <h1>Portfolio</h1>
+  <nav class="nav">
+    <h1>James Snell</h1>
+    <a class="nav-link active" href="index.html">Active</a>
+    <a class="nav-link" href="portfolio.html">Portfolio</a>
+    <a class="nav-link" href="contact.html">Contact</a>
 
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+  </nav>
 
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <img src="technics-q-c-640-480-1.jpg" alt="Word Guess" class="img-fluid">
         <h3>Word Guess</h3>
       </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
 
+
+      <div class="col-md-4">
+        <img src="technics-q-c-640-480-2.jpg" alt="RPG Game" class="img-fluid">
         <h3>RPG Game</h3>
       </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
 
+
+      <div class="col-md-4">
+        <img src="technics-q-c-640-480-5.jpg" alt="Trivia Game" class="img-fluid">
         <h3>Trivia Game</h3>
       </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+    </div>
 
+    <div class="row">
+      <div class="col-md-4">
+        <img src="technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget" class="img-fluid">
         <h3>Rutgers Info Widget</h3>
       </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
 
+
+      <div class="col-md-4">
+        <img src="technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors" class="img-fluid">
         <h3>Rock Paper Scissors</h3>
       </div>
 
-    </section>
-
+    </div>
   </div>
 
-  <footer>
-    <div class="container">
-      Copyright &copy;
-    </div>
-  </footer>
+  <footer class="footer mt-auto py-3">
+      <div class="container">
+        <span class="text-muted">Copyright &copy</span>
+      </div>
+    </footer>
+
+
+  </div>
 </body>
 
 </html>
