Updated portfolio and added working links to projects

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       <img src="Tall.jpg" class="auth-image" alt="James">
 
-      <p>I graduated Colorado State University with a bachelors in Communication Studies. I have worked a plethora of jobs since. In the supply chain department I ran a liquor store, worked in a warehouse, a greenhouse, a trucking yard, and made malt for Coors Brewery. In the customer service sector I caddied, worked fast food, and held the service specialist title in an office setting. My transition to tech has led me to study html and css through Skillcrush, then a JavaScript prep course at Galvanize before ending up in the University of Denvers bootcamp.</p>
+      <p>I graduated Colorado State University with a bachelors in Communication Studies. I have worked a plethora of jobs since. In the supply chain department I ran a liquor store, worked in a warehouse, a greenhouse, a trucking yard, and made malt for Coors Brewery. In the customer service sector I caddied, worked fast food, and held the service specialist title in an office setting. My transition to tech has led me to study html and css through Skillcrush, then a JavaScript prep course at Galvanize before ending up in the University of Denver's bootcamp. A jack of all trades is a master of none, while a master of one is a connector of none. </p>
 
     </section>
 
@@ -34,7 +34,7 @@
 
   <footer>
     <div class="container">
-      Copyright &copy; 
+      <span class="text-muted">Copyright &copy James</span>
     </div>
   </footer>
 </body>
