--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
 
   <nav class="nav">
     <h1>James Snell</h1>
-    <a class="nav-link active" href="index.html">Active</a>
+    <a class="nav-link active" href="index.html">Home</a>
     <a class="nav-link" href="portfolio.html">Portfolio</a>
     <a class="nav-link" href="contact.html">Contact</a>
 
@@ -33,33 +33,35 @@
   <div class="container">
     <div class="row">
       <div class="col-md-4">
-        <img src="technics-q-c-640-480-1.jpg" alt="Word Guess" class="img-fluid">
-        <h3>Word Guess</h3>
+        <img src="technics-q-c-640-480-1.jpg" alt="Friend Finder" class="img-fluid">
+        <a type="button"  href="https://vast-ocean-96869.herokuapp.com/" > Friend Finder</button> </a>
       </div>
 
 
       <div class="col-md-4">
         <img src="technics-q-c-640-480-2.jpg" alt="RPG Game" class="img-fluid">
-        <h3>RPG Game</h3>
+        <a type="button" href="file:///Users/james/Desktop/code/psychic-game/Psychic-Game/index.html" > Psychic Game</button> </a>
       </div>
 
 
       <div class="col-md-4">
         <img src="technics-q-c-640-480-5.jpg" alt="Trivia Game" class="img-fluid">
-        <h3>Trivia Game</h3>
+        <a type="button" href="https://sneezynam3.github.io/Train/" > Train Scheduler</a></button> 
+
       </div>
     </div>
 
     <div class="row">
       <div class="col-md-4">
         <img src="technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget" class="img-fluid">
-        <h3>Rutgers Info Widget</h3>
+        <a type="button"  href="https://sneezynam3.github.io/unit-4-game/"  > Crystal Collector</button> </a>
+      </h>
       </div>
-
 
       <div class="col-md-4">
         <img src="technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors" class="img-fluid">
-        <h3>Rock Paper Scissors</h3>
+        <a type="button"  href="https://sneezynam3.github.io/letsGetGiphy/" > Gif Tastic!</button> </a>
+
       </div>
 
     </div>
@@ -67,7 +69,7 @@
 
   <footer class="footer mt-auto py-3">
       <div class="container">
-        <span class="text-muted">Copyright &copy</span>
+        <span class="text-muted">Copyright &copy James</span>
       </div>
     </footer>
 
